<resources>
    <string name="app_name">FitWare</string>

    <!-- Splash Activity -->
    <string name="name_empresa">By: AddMeans</string>
    <string name="name_app">FitWare</string>

    <!-- Login / Register -->
    <string name="logo_icon">Logo_icon</string>
    <string name="title_login">Realize seu Login!</string>
    <string name="enter">Entrar</string>
    <string name="login">Login</string>
    <string name="register">Registre-se</string>

    <string name="dados_pesoais">Dados Pesoais</string>
    <string name="fist_name">Primeiro nome</string>
    <string name="secondy_name">Sobrenome</string>

    <string name="sexo">Qual o seu sexo?</string>
    <string-array name="spinner_sexo">
        <item>Selecione de acordo com seu gênero</item>
        <item>M</item>
        <item>F</item>
        <item>O</item>
    </string-array>

    <string name="data_nascimento">Data de Nascimento (Ex: 2020-05-10)</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>

    <string name="cpf">CPF</string>
    <string name="weight">Peso (Ex: 65.5)</string>
    <string name="height">Altura (Ex: 1.75)</string>
    <string name="city">Cidade (Ex: São Paulo)</string>
    <string name="state">Estado (Ex: SP)</string>
    <string name="street">Endereço</string>
    <string name="number">Numero</string>
    <string name="cep">CEP (Ex: xxxxx-xxx)</string>
    <string name="cell">Celular</string>

    <string name="next">Proximo</string>

    <!-- Navigation Bottom -->
    <string name="perfil">Perfil</string>
    <string name="home">Home</string>
    <string name="aula">Aulas</string>
    <string name="scheduling">Agendamento</string>

    <!-- Home Activity -->
    <string name="welcome">Bem-vindo Ao FitWare</string>
    <string name="academy">Academias Parceiras</string>
    <!--  Agendamento Activity  -->
    <string name="days">Aulas Disponiveis:</string>
    <string name="agende">Agende seu dia</string>

</resources>