<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/register_cpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:layout_marginTop="30dp"
        android:drawablePadding="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/cpf"/>

    <EditText
        android:id="@+id/register_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:drawablePadding="10dp"
        android:layout_below="@id/register_cpf"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/weight"/>

    <EditText
        android:id="@+id/register_height"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:drawablePadding="10dp"
        android:layout_below="@id/register_weight"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/height" />

    <EditText
        android:id="@+id/register_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:drawablePadding="10dp"
        android:layout_below="@id/register_height"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/city" />

    <EditText
        android:id="@+id/register_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:drawablePadding="10dp"
        android:layout_below="@id/register_city"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:inputType="textPassword"
        android:hint="@string/state" />

    <EditText
        android:id="@+id/register_street"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:drawablePadding="10dp"
        android:layout_below="@id/register_state"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:inputType="textPassword"
        android:hint="@string/street" />

    <EditText
        android:id="@+id/register_cep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:drawablePadding="10dp"
        android:layout_below="@id/register_street"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:inputType="textPassword"
        android:hint="@string/cep" />

    <Button
        android:id="@+id/button_register_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs_redondos"
        android:text="@string/next"
        android:textSize="20sp"
        android:textColor="@color/light"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

</RelativeLayout>