<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_dados_pessoais"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dados_pesoais"
        android:textSize="30sp"
        android:gravity="center"
        android:textStyle="bold|italic"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:drawablePadding="10dp"
        android:layout_below="@id/title_dados_pessoais"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:inputType="textWebEmailAddress"
        android:hint="@string/fist_name"/>

    <EditText
        android:id="@+id/secondy_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:drawablePadding="10dp"
        android:layout_below="@id/first_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:inputType="textWebEmailAddress"
        android:hint="@string/secondy_name"/>

    <RadioGroup
        android:id="@+id/group_sexo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/secondy_name"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp">

        <RadioButton
            android:id="@+id/sexo_masculino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexo_m"/>

        <RadioButton
            android:id="@+id/sexo_feminino"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sexo_f"/>

    </RadioGroup>

    <EditText
        android:id="@+id/data_nascimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="15dp"
        android:drawablePadding="10dp"
        android:layout_below="@id/group_sexo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:inputType="textWebEmailAddress"
        android:hint="@string/data_nascimento"/>

    <Button
        android:id="@+id/button_entrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/inputs_redondos"
        android:text="@string/next"
        android:textSize="20sp"
        android:textColor="@color/light"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

</RelativeLayout>